crates/uitest/fixtures/ty_check/unary.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/unary.fe
---
error[8-0016]: `core::ops::Neg` trait is not implemented
  ┌─ unary.fe:6:14
  │
6 │     let _y = -f
  │              ^^
  │              │
  │              `-` can't be applied to `Foo`
  │              Try implementing `core::ops::Neg` for `Foo`

error[8-0016]: `core::ops::Not` trait is not implemented
  ┌─ unary.fe:7:14
  │
7 │     let _z = !f
  │              ^^
  │              │
  │              `!` can't be applied to `Foo`
  │              Try implementing `core::ops::Not` for `Foo`

error[8-0052]: unary `+` is not supported
  ┌─ unary.fe:5:14
  │
5 │     let _x = +f
  │              ^^ remove the unary `+`
